--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-<header class="inner">
+<header>
     <h2><a href="/"><i class="fas fa-code"></i>
         CodeGig</a></h2>
     <nav>
@@ -32,9 +32,7 @@
     </nav>
 </header>
 
-<div class="container">
-    {{{body}}}
-</div>
+{{{body}}}
 
 </body>
 
